Actualizar version mobile y estilos

--- a/Mobile/index.html
+++ b/Mobile/index.html
@@ -2,10 +2,12 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Jugando con la Historia</title>
+    <title>Jugando con la Historia - Mobile</title>
+    <!-- CSS Mobile -->
     <link rel="stylesheet" href="css/styles.css">
-    <script src="js/script.js" defer></script>
-    <script src="js/game.js" defer></script>
+    <!-- Scripts desde la raíz -->
+    <script src="../js/script.js" defer></script>
+    <script src="../js/game.js" defer></script>
 </head>
 <body>
 
@@ -26,7 +28,7 @@
             <ul id="wordList"></ul>
 
             <h3>Opciones</h3>
-            <button class="back-btn" onclick="window.location.href='menu.html'">🏠 Menú</button>
+            <button class="back-btn" onclick="window.location.href='../menu.html'">🏠 Menú</button>
         </div>
     </div>
 
