--- a/Mobile/index.html
+++ b/Mobile/index.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Jugando con la Historia - Mobile</title>
-    <!-- CSS Mobile -->
     <link rel="stylesheet" href="css/styles.css">
-    <!-- Scripts desde la raíz -->
-    <script src="../js/script.js" defer></script>
-    <script src="../js/game.js" defer></script>
+    <script src="js/script.js" defer></script>
+    <script src="js/game.js" defer></script>
 </head>
 <body>
 
@@ -28,9 +26,10 @@
             <ul id="wordList"></ul>
 
             <h3>Opciones</h3>
-            <button class="back-btn" onclick="window.location.href='../menu.html'">🏠 Menú</button>
+            <button class="back-btn" onclick="window.location.href='menu.html'">🏠 Menú</button>
         </div>
     </div>
 
 </body>
 </html>
+
